# Zelcry

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  Procfile  README.md  build.sh  manage.py  pyproject.toml  render.yaml  replit.md  requirements.txt
static/css/: style.css
static/js/: main.js
supabase/migrations/: 20251001075610_create_zelcry_schema.sql
templates/: ai_advisor.html  base.html  crypto_details.html  cryptocurrencies.html  dashboard.html  dashboard_new.html  index.html  login.html  market_insights.html  news.html  portfolio_analytics.html  price_alerts.html  privacy_policy.html  signup.html  terms_of_service.html  watchlist.html
zelcry/: asgi.py  settings.py  urls.py  wsgi.py
zelcry/core/: admin.py  apps.py  crypto_news.py  groq_ai.py  models.py  scheduler.py  utils.py  views.py
zelcry/core/management/commands/: seed_crypto_data.py
zelcry/core/migrations/: 0001_initial.py  0002_userprofile_theme_chatmessage_pricealert.py  0003_pricealert_triggered_pricealert_triggered_at_and_more.py
