[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Zelcry"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.6",
    "django-pwa>=2.0.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]
